<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin">

        <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/dummy_city"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageChangeLocation"
            android:layout_width="@dimen/text_height_heading"
            android:layout_height="@dimen/text_height_heading"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_toRightOf="@+id/cityName"
            android:src="@drawable/edit"/>

        <TextView
            android:id="@+id/popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cityName"
            android:maxLines="1"
            android:text="@string/foodie_index"/>

        <TextView
            android:id="@+id/nightLifeIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/popularity"
            android:maxLines="1"
            android:text="@string/nightlife_index"/>

        <TextView
            android:id="@+id/topCuisines"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cityName"
            android:text="@string/nightlife_index"/>
    </RelativeLayout>
</layout>