<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/activity_location_selection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        tools:context="hackerearth.satya.tomatopie.activity.LocationSelectionActivity">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/location_editText"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="1"
                android:hint="@string/hint_location"
                android:inputType="text"
                android:textAlignment="viewStart"/>

            <ImageButton
                android:id="@+id/image_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                app:srcCompat="@mipmap/ic_launcher"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

        <TextView
            android:id="@+id/text_currentLocation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height_heading"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/default_margin"
            android:text="@string/text_use_location"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height_heading"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:text="@string/popular_cities"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <ListView
            android:id="@+id/list_popular_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="1dp"
            android:paddingTop="@dimen/default_margin"
            tools:listitem="@layout/row_popular_city"/>
    </LinearLayout>
</layout>